--- a/DockingAdminPanel/Views/Patients/Index.cshtml
+++ b/DockingAdminPanel/Views/Patients/Index.cshtml
@@ -11,9 +11,9 @@
 <div class="card mt-5">
 
     <div class="card-header">
-        All Patiens
+       
 
-        <a class="btn btn-primary btn-block float-end" asp-action="Create"><i class='bx bx-add-to-queue bx-tada bx-flip-vertical '></i>Add Patients</a>
+        <a class="btn btn-primary btn-block float-start" asp-action="Create"><i class='bx bx-add-to-queue bx-tada bx-flip-vertical '></i>Add Patients</a>
     </div>
     <div class="card-body">
         <div class="table-responsive">
