--- a/DockingAdminPanel/Views/LabItems/Create.cshtml
+++ b/DockingAdminPanel/Views/LabItems/Create.cshtml
@@ -37,6 +37,20 @@
                 <input asp-for="NormalValue" class="form-control" />
                 <span asp-validation-for="NormalValue" class="text-danger"></span>
             </div>
+            <div class="form-group col-md-6">
+                <label asp-for="CategoryId" class="control-label">Category</label>
+                <select asp-for="CategoryId" class="form-control">
+                    <option value="">Select a Category</option>
+                    @if (Model.labCategories.Count() > 0)
+                    {
+                        @foreach (var item in Model.labCategories)
+                        {
+                            <option value="@item.Id">@item.Name</option>
+                        }
+                    }
+                </select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
