--- a/DockingAdminPanel/Views/Shared/Components/MenuSideBar/Default.cshtml
+++ b/DockingAdminPanel/Views/Shared/Components/MenuSideBar/Default.cshtml
@@ -51,20 +51,21 @@
     </div>*@
     @if (Model != null )
     {
-        <header class="header" style="background:#0e1c36" id="header">
+        <header class="header body-pd " style="background:#0e1c36" id="header">
 
             <div class="header_toggle" style="color:#fff"> <i class='bx bx-menu' id="header-toggle"></i> </div>
             <div class="header_img float-right"> <img src="https://i.imgur.com/hczKIze.jpg" alt=""> </div>
             <a asp-action="logout" asp-controller="Account" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span> </a>
         </header>
 
-        <div class="l-navbar" id="nav-bar">
+        <div class="l-navbar show" id="nav-bar">
             <nav class="nav">
                 <div>
                     <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Admin Panel</span> </a>
                     <div class="nav_list">
                         <a asp-action="index" asp-controller="PatientTokens" class="nav_link "><i class='bx bx-clinic'></i>  <span class="nav_name">DailyCounter</span> </a>
                         <a asp-action="index" asp-controller="Doctors" class="nav_link "><i class='bx bx-clinic'></i>  <span class="nav_name">Doctors</span> </a>
+                        <a asp-action="index" asp-controller="LabCategories" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Categories</span> </a>
                         <a asp-action="index" asp-controller="LabItems" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Items</span> </a>
                         <a asp-action="index" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Patients Appointments</span> </a>
                         <a asp-action="CollectTestSamples" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Appointments</span> </a>
