--- a/DockingAdminPanel/Views/Doctors/Create.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Create.cshtml
@@ -79,11 +79,11 @@
             </div>
 			</div>
 			<div class="row">
-				<div class="form-group col-4">
+				@*<div class="form-group col-4">
                 <label asp-for="TotalFee" class="control-label"></label>
 					<input asp-for="TotalFee" type="number" class="form-control" />
 					<span asp-validation-for="TotalFee" class="text-danger"></span>
-            </div>
+            </div>*@
 				<div class="form-group col-4">
 					<label asp-for="DoctorFee" class="control-label"></label>
 					<input asp-for="DoctorFee" type="number" class="form-control" />
