--- a/DockingAdminPanel/Views/LabItems/Create.cshtml
+++ b/DockingAdminPanel/Views/LabItems/Create.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label asp-for="CategoryId" class="control-label">Category</label>
-                <select asp-for="CategoryId" class="form-control">
+                <select asp-for="CategoryId" required class="form-control">
                     <option value="">Select a Category</option>
                     @if (Model.labCategories.Count() > 0)
                     {
