--- a/DockingAdminPanel/Views/Patients/CreateLab.cshtml
+++ b/DockingAdminPanel/Views/Patients/CreateLab.cshtml
@@ -52,11 +52,11 @@
                     <input asp-for="Illness" class="form-control" />
                     <span asp-validation-for="Illness" class="text-danger"></span>
                 </div>
-                <div class="form-group col-md-6">
+            @*    <div class="form-group col-md-6">
                     <label asp-for="DoctorId" class="control-label">Doctor</label>
                     <select asp-for="DoctorId" class="form-control">
                         <option value="">Select a Doctor</option>
-                        @if (Model.Doctors.Count() > 0)
+						@if (Model.Doctors.Count() > 0 && Model.Doctors !=null)
                         {
                             @foreach (var item in Model.Doctors)
                             {
@@ -64,8 +64,11 @@
                             }
                         }
                     </select>
-                    <span asp-validation-for="DoctorId" class="text-danger"></span>
-                </div>
+					@if (Model.Doctors.Count() > 0 && Model.Doctors !=null)
+                        {
+					<span asp-validation-for="DoctorId" class="text-danger"></span>
+						}
+                </div>*@
             </div>
             <div class="form-group">
                 <label class="control-label"></label>
@@ -76,9 +79,8 @@
                 </div>
             </div>
             <div class="form-group">
-                <button id="PaidAppointment" type="button" class="btn btn-primary btn-block rounded-pill font-size-16" onclick="onsubmitClick()">Paid Appointment</button>
-                <button id="Appointment" type="button" class="btn btn-primary btn-block rounded-pill font-size-16" onclick="onsubmitUnpaidClick()">Appointment</button>
  
+				<button id="Appointment" type="button" class="btn btn-primary btn-block rounded-pill font-size-16" onclick="onsubmitLabClick()">Lab Appointment</button>
                 <a asp-action="Index" class="btn btn-primary btn-block rounded-pill font-size-16">Back to List</a>
             </div>
         </form>
